redpanda/templates/redpanda-console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-console
  namespace: opa
  labels:
    app: redpanda-console
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: redpanda-console
  type: NodePort
