redpanda/templates/redpanda-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redpanda-console
  namespace: opa
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - host: redpanda.virtual33.myguest.virtualbox.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redpanda-console
                port:
                  number: 8080
